<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="314dp"
        android:layout_height="45dp"
        android:fontFamily="serif-monospace"
        android:text="@string/v_i_p_list"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/txtInformations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/informations"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/hintFirstName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInformations"
        app:layout_constraintVertical_bias="0.12"
        android:autofillHints="" />

    <EditText
        android:id="@+id/hintSurname"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="text"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hintFirstName"
        app:layout_constraintVertical_bias="0.147"
        android:autofillHints="" />

    <EditText
        android:id="@+id/hintTelephone"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="text"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hintCourse"
        app:layout_constraintVertical_bias="0.245"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/hintCourse"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/desired_course"
        android:inputType="text"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hintSurname"
        app:layout_constraintVertical_bias="0.179"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:fontFamily="monospace"
        android:text="@string/save"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/btnClean"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:fontFamily="monospace"
        android:text="@string/clean"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFinish"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="200dp"
        android:layout_height="62dp"
        android:fontFamily="monospace"
        android:text="@string/finish"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintTelephone"
        app:layout_constraintVertical_bias="0.681" />

</androidx.constraintlayout.widget.ConstraintLayout>